objects/CRM_Monthly_Target_and_Achievement__c.object
<CustomObject>
    <fields>
        <fullName>CRM_Achieved_This_Month__c</fullName>
        <label>Achieved This Month</label>
        <summarizedField>CRM_Weekly_Target_and_Achievement__c.CRM_Weekly_Achievement__c</summarizedField>
        <summaryForeignKey>CRM_Weekly_Target_and_Achievement__c.CRM_Monthly_Target_and_Achievement__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>CRM_From__c</fullName>
        <label>From</label>
        <summarizedField>CRM_Weekly_Target_and_Achievement__c.CRM_From__c</summarizedField>
        <summaryForeignKey>CRM_Weekly_Target_and_Achievement__c.CRM_Monthly_Target_and_Achievement__c</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>CRM_KPI__c</fullName>
        <label>Quarterly Target and Achievements</label>
        <referenceTo>CRM_KPI__c</referenceTo>
        <relationshipLabel>Monthly Target and Achievements</relationshipLabel>
        <relationshipName>Monthly_Target_and_Achievements</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>CRM_Month__c</fullName>
        <label>Month</label>
        <picklist>
            <picklistValues>
                <fullName>JANUARY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FEBRUARY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MARCH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>APRIL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MAY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>JUNE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>JULY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AUGUST</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SEPTEMBER</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OCTOBER</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NOVEMBER</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DECEMBER</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CRM_Target_This_Month__c</fullName>
        <label>Target This Month</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CRM_To__c</fullName>
        <label>To</label>
        <summarizedField>CRM_Weekly_Target_and_Achievement__c.CRM_To__c</summarizedField>
        <summaryForeignKey>CRM_Weekly_Target_and_Achievement__c.CRM_Monthly_Target_and_Achievement__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Monthly Target and Achievement</label>
    <nameField>
        <label>Monthly Target and Achievement Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Monthly Target and Achievements</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Validate_Month</fullName>
        <active>false</active>
        <description>Please select Month according to KPI&apos;s selected quarter.</description>
        <errorConditionFormula>AND(
OR(
AND(
!ISPICKVAL(CRM_KPI__r.CRM_Quarter__c, &apos;1&apos;),
OR(
ISPICKVAL(CRM_Month__c, &apos;APRIL&apos;),
ISPICKVAL(CRM_Month__c, &apos;MAY&apos;),
ISPICKVAL(CRM_Month__c, &apos;JUNE&apos;)
)
),
AND(
!ISPICKVAL(CRM_KPI__r.CRM_Quarter__c, &apos;2&apos;),
OR(
ISPICKVAL(CRM_Month__c, &apos;JULY&apos;),
ISPICKVAL(CRM_Month__c, &apos;AUGUST&apos;),
ISPICKVAL(CRM_Month__c, &apos;SEPTEMBER&apos;)
)
),
AND(
!ISPICKVAL(CRM_KPI__r.CRM_Quarter__c, &apos;3&apos;),
OR(
ISPICKVAL(CRM_Month__c, &apos;OCTOBER&apos;),
ISPICKVAL(CRM_Month__c, &apos;NOVEMBER&apos;),
ISPICKVAL(CRM_Month__c, &apos;DECEMBER&apos;)
)
),
AND(
!ISPICKVAL(CRM_KPI__r.CRM_Quarter__c, &apos;4&apos;),
OR(
ISPICKVAL(CRM_Month__c, &apos;JANUARY&apos;),
ISPICKVAL(CRM_Month__c, &apos;FEBRUARY&apos;),
ISPICKVAL(CRM_Month__c, &apos;MARCH&apos;)
)
)
)
)</errorConditionFormula>
        <errorDisplayField>CRM_Month__c</errorDisplayField>
        <errorMessage>Please select Month according to KPI&apos;s selected quarter.</errorMessage>
    </validationRules>
</CustomObject>